Implementação dos records dtos, e dos records controller.